--- a/package.json
+++ b/package.json
@@ -1,12 +1,30 @@
 {
-    "name": "Boop-bot",
-    "version": "1.0.0",
-    "description": "My own Discord bot",
-    "main": "bot.js",
-    "author": "JVC",
-    "dependencies": {
-        "discord.js": "^11.2.1",
-        "snekfetch": "^3.6.4",
-        "winston": "^2.4.0"
-    }
+  "name": "ecobot",
+  "version": "1.0.0",
+  "description": "Simple economy bot for discord.",
+  "main": "bot.js",
+  "scripts": {
+    "test": "node bot.js",
+    "start": "node bot.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/INEX07/ecobot.git"
+  },
+  "keywords": [
+    "eco",
+    "ecobot",
+    "quick.db-economy",
+    "quick.eco"
+  ],
+  "author": "INEX07",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/INEX07/ecobot/issues"
+  },
+  "homepage": "https://github.com/INEX07/ecobot#readme",
+  "dependencies": {
+    "discord.js": "^11.5.1",
+    "quick.eco": "^1.0.2"
+  }
 }
