--- a/package.json
+++ b/package.json
@@ -26,6 +26,10 @@
   "dependencies": {
     "discord.js": "^11.5.1",
     "quick.eco": "^1.0.2",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "express-validator": "^6.4.0",
+    "express-jwt": "^5.3.3",
+    "express-handlebars": "^4.0.3",
+    "express-graphql": "^0.9.0"
   }
 }
